Moved to Eloquent from MySQLi due to issues on remote systems, cleaned up some of the code

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
         }
     ],
     "require": {
-        "slim/slim": "~2.5"
+        "slim/slim": "~2.6",
+        "illuminate/database": "*"
+    },
+    "autoload": {
+        "files": [ "config.php" ],
+        "classmap": [ "models" ]
     }
 }
